# rag-augmented-storytelling

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py
app/api/: deps.py
app/api/routes/: documents.py  kbs.py  query.py
app/core/: logging.py  settings.py
app/db/: __init__.py  crud.py  models.py  session.py
app/embeddings/: __init__.py  hf_dense.py
app/ingest/: __init__.py  chunking.py  pipeline.py
app/ingest/extractors/: __init__.py  base.py  dispatcher.py  html.py  pdf.py  plaintext.py  structured.py
app/llms/: gemini.py  openai_compat.py
app/rag/: prompting.py  retriever.py
app/storage/: __init__.py  local.py
app/vectorstore/: base.py  chroma.py  qdrant.py
backend/: .gitignore  requirements.txt
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  documents.py  kbs.py  query.py
backend/app/core/: logging.py  settings.py
backend/app/ingest/: chunking.py  pipeline.py
backend/app/ingest/extractors/: base.py  common.py  dispatcher.py  html.py  plaintext.py  structured.py
backend/app/llms/: __init__.py  gemini.py
backend/app/rag/: __init__.py  retriever.py
backend/app/vectorstore/: __init__.py  base.py  chroma.py
docker/: Dockerfile.fastapi  Dockerfile.streamlit  env.docker.example
tests/: test_chunking.py  test_db_crud.py  test_storage.py
