[project]
name = "rag-augmented-storytelling"
version = "0.1.0"
description = "RAG-enhanced storytelling backend (FastAPI) + Streamlit UI"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Gabriel" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.2",
  "orjson>=3.10.10",
  "python-multipart>=0.0.12",

  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",

  "qdrant-client>=1.12.0",

  # Ingestion
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "pypdf>=5.1.0",

  # Embeddings
  "sentence-transformers>=3.2.1",

  # UI
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.uv]
# Keep lockfile for reproducible installs.

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle/pyflakes
  "I",              # import sorting
  "UP",             # pyupgrade
  "B",              # bugbear
  "SIM",            # simplify
  "RUF",            # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter pragmatically
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
